# pyros_performance

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/: main.py
src/pyros_performance/: __init__.py  profiler.py
