[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyros-performance"
version = "0.1.3"
description = "ROS2-friendly function performance profiler"
authors = [
    { name = "Erfan", email = "erfantabatabaei1380@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "psutil"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]